--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,7 +34,7 @@ jobs:
         box:
           - runner: ubuntu-22.04
             arch: amd64
-          - runner: buildjet-8vcpu-ubuntu-2204-arm
+          - runner: ubuntu-22.04-arm
             arch: arm64
     runs-on: ${{ matrix.box.runner }}
     timeout-minutes: 45
